--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-scripts": "2.1.0",
+    "react-table": "6.8.6",
+    "prop-types": "^15.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
