--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.0",
     "react-table": "6.8.6",
-    "prop-types": "^15.6.2"
+    "react-render": "^1.1.0",
+    "prop-types": "^15.6.2",
+    "babel-core": "^6.1.20",
+    "babel-plugin-transform-react-jsx": "^6.1.18",
+    "babel-preset-es2015": "^6.3.13",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "yargs": "^3.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
