--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "reddit-comments",
-  "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "watch": "webpack --watch & forever  --watch --watchDirectory ./static/js/src ./render_server.js",
+    "postinstall": "webpack -p"
+  },
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0",
-    "react-table": "6.8.6",
-    "react-render": "^1.1.0",
-    "prop-types": "^15.6.2",
     "babel-core": "^6.1.20",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.1.18",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "forever": "^0.15.2",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-render": "^1.1.0",
+    "react-table": "6.8.6",
+    "prop-types": "^15.6.2",
+    "require": "^2.4.20",
+    "webpack": "^1.13.1",
     "yargs": "^3.29.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  }
 }
