--- a/package.json
+++ b/package.json
@@ -13,14 +13,49 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "forever": "^0.15.2",
+    "prop-types": "^15.6.2",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-render": "^1.1.0",
     "react-table": "6.8.6",
-    "prop-types": "^15.6.2",
     "require": "^2.4.20",
     "webpack": "^1.13.1",
-    "yargs": "^3.29.0"
+    "yargs": "^3.29.0",
+    "namor": "^1.1.1",
+    "classnames": "^2.2.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.7.0",
+    "babel-cli": "6.14.0",
+    "babel-eslint": "6.1.2",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^4.1.1",
+    "eslint-config-react-tools": "^1.0.10",
+    "eslint-plugin-class-property": "^1.0.6",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "match-sorter": "^1.8.0",
+    "npm-run-all": "^4.1.2",
+    "onchange": "^3.0.2",
+    "postcss-cli": "^2.6.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-json-tree": "^0.10.9",
+    "rimraf": "^2.6.1",
+    "rollup": "^0.55.3",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-node-resolve": "^3.0.2",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^3.0.0",
+    "standard": "^10.0.2",
+    "stylus": "^0.54.5"
   },
   "babel": {
     "presets": [
