--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "python.pythonPath": "/usr/local/opt/python/bin/python3.7"
+  "python.pythonPath": "/usr/local/opt/python/bin/python3.7",
+  "python.linting.pylintEnabled": true,
+  "cSpell.words": [
+    "subreddit"
+  ]
 }
