--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "2.1.1",
     "react-table": "^6.8.6"
   },
+  "proxy": "http://127.0.0.1:5000/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
